--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -84,8 +84,7 @@ textarea {
 
 /* Heading */
 
-h3,
-label[for='new-task-name'] {
+h3 {
 	color: #333;
 	font-weight: 700;
 	font-size: 15px;
@@ -94,6 +93,8 @@ label[for='new-task-name'] {
 	margin: 0;
 	text-transform: uppercase;
 }
+
+/* Inputs */
 
 input[type="text"] {
 	margin: 0;
@@ -123,22 +124,6 @@ input[type="text"]:focus {
 p {
 	width: 100%;
 	text-align: center;
-}
-
-/* New Task */
-
-label[for='new-task'] {
-	display: block;
-	margin: 0 0 20px;
-}
-
-input#new-task {
-	float: left;
-	width: 318px;
-}
-
-p > button:hover {
-	color: #0FC57C;
 }
 
 
@@ -194,10 +179,6 @@ p > button:hover {
 
 /* Edit Task */
 
-
-ul li.editMode label {
-	display: none;
-}
 .empty {
     display: none;
     color: red;
