--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3,7 +3,7 @@
 body {
 	background: linear-gradient(to right, #614385, #516395) ;
 	color: #333;
-	font-family: Lato, sans-serif;
+	font-family:  sans-serif;
 	background-color:#e4e4e4;
 }
 
@@ -49,7 +49,7 @@ button {
 	font-size: 15px;
 	width: 10rem;
 	padding: .5rem;
-	font-family: Lato, sans-serif;
+	font-family:  sans-serif;
 	cursor: pointer;
 	transition: all .2s;
 }
@@ -69,14 +69,14 @@ button {
 }
 
 ::placeholder {
-	font-family: Lato, sans-serif;
+	font-family: sans-serif;
 	font-size: .8rem;
 	color: #5D5D5Daa;
 	text-align: center;
 }
 
 textarea {
-	font-family: Lato, sans-serif;
+	font-family:  sans-serif;
 	resize: none;
 	border-radius: .5rem;
 	padding: .5rem;
@@ -106,7 +106,7 @@ input[type="text"] {
 	border: 1px solid #ddd;
 	background: #fff;
 	border-radius: 6px;
-	font-family: Lato, sans-serif;
+	font-family:  sans-serif;
 }
 
 input[type="text"]:focus {
